Fix bug che impedisce di utilizzare una SearchByLinq all'interno di un'altra

[02/08/2021] - 5.0.22 - Simone Pelaia
Reintegrate tutte le librerie nell'unica Business.Data.Objects.Core

[03/08/2021] - 5.0.23 - Simone Pelaia
Esposta la lista dei parametri db

[03/08/2021] - 5.0.24 - Simone Pelaia
Esposta la proprietà che indica se possibile chiudere o meno la connessione db dopo uno statement

[03/08/2021] - 5.0.25 - Simone Pelaia
Aggiunto metodo su oggetto "FromJson" per deserializzazione. Attenzione: presuppone la serializzazione con "ToJson"

[11/08/2021] - 5.0.26 - Simone Pelaia
Aggiunta classe LinqFilter per combinare dinamicamente più statement LINQ. utile nelle ricerche con parametri multipli opzionali

[12/08/2021] - 5.0.27 - Simone Pelaia
Fix classe LinqFilter ritorna condizione vera se non eseguita alcuna combinazione And/Or

[30/08/2021] - 5.0.28 - Simone Pelaia
Piccole fix alla deserializzazione JSON

[31/08/2021] - 5.0.29 - Simone Pelaia
Fix alla deserializzazione JSON
Inizio rimozione metodi non più utili

[02/09/2021] - 5.0.30 - Simone Pelaia
Rimozione metodi non più utili
Rimozione LoadFullobjects (ora di default)
Rimozione To e From DTO (Dictionary)
Rimozione Mapping DataList
Rimossa gestione oggetti non mappati (ovvero impostabili)
Rimossa BusinessObjectList in quanto poco utiles
Rimossa serializzazione/deserializzazione binaria
Rimossi filtri specializzati

[13/09/2021] - 5.0.31 - Simone Pelaia
Fix bug che esegue query su campo oggetto quando questo e' null (come se fosse LoadOnAccess)

[14/09/2021] - 5.0.32 - Simone Pelaia
Aggiunti metodi DB per la mappatura delle query su oggetti DTO

[20/09/2021] - 5.0.33 - Simone Pelaia
Fix bug query mappata che non ritorna ultimo campo db

[20/09/2021] - 5.0.36 - Simone Pelaia
Fix bug query mappata su campi nullable e fix query paginata

[06/10/2021] - 5.0.37 - Simone Pelaia
Query mappata imposta anche proprietà ereditate

[06/10/2021] - 5.0.38 - Simone Pelaia
Modificato logdebug senza format